# ArmaToJSON

./: .gitignore  CMakeLists.txt  CMakePresets.json
include/: armaDataFunctions.h  armaDataFunctions.hpp  armaFileFunctions.h  armaFileFunctions.hpp  dllmain.hpp  pch.h
src/: armaDataFunctions.cpp  armaDataFunctions.cxx  armaFileFunctions.cpp  armaFileFunctions.cxx  dllmain.cpp  dllmain.cxx  dllmain.def
